fix-- some page overflow

--- a/Frontend/src/components/pages/allpostpage/HeroComponent.css
+++ b/Frontend/src/components/pages/allpostpage/HeroComponent.css
@@ -3,6 +3,12 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body, html {
+    width: 100%;
+    overflow-x: hidden;
 }
 
 
@@ -16,6 +22,7 @@
     display: flex;
     justify-content: center;
     padding: 1rem 0;
+    overflow-x: hidden;
 }
 
 
