--- a/Frontend/src/components/pages/createpage/Hero.component.css
+++ b/Frontend/src/components/pages/createpage/Hero.component.css
@@ -5,6 +5,12 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body, html {
+    width: 100%;
+    overflow-x: hidden;
 }
 
 /* Main component Wrapper */
@@ -16,6 +22,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 
