--- a/Frontend/src/components/subComponents/signup.navbar/signup.nav.css
+++ b/Frontend/src/components/subComponents/signup.navbar/signup.nav.css
@@ -142,3 +142,100 @@
 .Login_Text:hover {
     background-color: rgb(25, 155, 0);
 }
+
+
+
+
+
+
+
+
+
+
+
+
+/* Responsive Styles ----------------------------------------5*/
+@media screen and (max-width: 750px) {
+    .Main_Signup_Navbar_Component {
+        padding: 0 1.5rem;
+    }
+    
+    .Created_Text {
+        font-size: .8rem;
+        letter-spacing: 1px;
+    }
+    
+    .Logo_Text {
+        font-size: 1.1rem;
+    }
+    
+    .Signup_Free_Text {
+        font-size: .85rem;
+    }
+    
+    .Login_Text {
+        font-size: 0.9rem;
+        letter-spacing: 1px;
+        padding: .5rem .9rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .Main_Signup_Navbar_Component {
+        padding: 0 1rem;
+        height: auto;
+        flex-direction: column;
+        padding: 1rem 0;
+        gap: 1rem;
+    }
+    
+    .Brand_Text {
+        flex-direction: column;
+        gap: 5px;
+        align-items: center;
+    }
+    
+    .Created_Text {
+        font-size: .75rem;
+    }
+    
+    .Logo_Text {
+        font-size: 1.3rem;
+    }
+    
+    .Main_Signup_Nav_Buttons {
+        flex-direction: column;
+        gap: 1rem;
+    }
+    
+    .Signup_Free_Text {
+        font-size: .8rem;
+    }
+    
+    .Login_Text {
+        font-size: 0.85rem;
+        padding: .5rem 1.2rem;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .Brand_Text_Container {
+        width: 100%;
+        justify-content: center;
+    }
+    
+    .Main_Signup_Nav_Buttons {
+        width: 100%;
+        align-items: center;
+    }
+    
+    .Login_Button_Component {
+        width: 100%;
+        justify-content: center;
+    }
+    
+    .Login_Text {
+        width: 60%;
+        text-align: center;
+    }
+}
